@@ -1,13 +1,16 @@
-=head1 SCHEMA CLASS
+=head1 NAME
 
-L<Bio::Chado::Schema> - root module of this package
+Bio::Chado::Schema::Companalysis - Augments sequence module with descriptions of computational
+        analyses and features resulting from those analyses
 
 =head1 CHADO MODULE
 
-Companalysis - Augments sequence module with descriptions of computational
-        analyses and features resulting from those analyses
+Classes in this namespace correspond to tables and views in the
+Chado Companalysis module.
 
 =head1 CLASSES
+
+These classes are part of the L<Bio::Chado::Schema> distribution.
 
 Below is a list of classes in this module of Chado.  Each of the
 classes below corresponds to a single Chado table or view.
