@@ -1,12 +1,15 @@
-=head1 SCHEMA CLASS
+=head1 NAME
 
-L<Bio::Chado::Schema> - root module of this package
+Bio::Chado::Schema::Map - Non-sequence maps: genetic, radiation hybrid, cytogenetic, etc
 
 =head1 CHADO MODULE
 
-Map - Non-sequence maps: genetic, radiation hybrid, cytogenetic, etc
+Classes in this namespace correspond to tables and views in the
+Chado Map module.
 
 =head1 CLASSES
+
+These classes are part of the L<Bio::Chado::Schema> distribution.
 
 Below is a list of classes in this module of Chado.  Each of the
 classes below corresponds to a single Chado table or view.
