@@ -1,14 +1,17 @@
-=head1 SCHEMA CLASS
+=head1 NAME
 
-L<Bio::Chado::Schema> - root module of this package
-
-=head1 CHADO MODULE
-
-Phylogeny - For representing phylogenetic trees; the trees represent the
+Bio::Chado::Schema::Phylogeny - For representing phylogenetic trees; the trees represent the
         phylogeny of some some kind of sequence feature (mainly
         proteins) or actual organism taxonomy trees
 
+=head1 CHADO MODULE
+
+Classes in this namespace correspond to tables and views in the
+Chado Phylogeny module.
+
 =head1 CLASSES
+
+These classes are part of the L<Bio::Chado::Schema> distribution.
 
 Below is a list of classes in this module of Chado.  Each of the
 classes below corresponds to a single Chado table or view.
