@@ -1,3 +1,9 @@
+Bio-Schema-Chado (0.05501)
+
+  * tweaked per-chado-module POD for better CPAN indexing
+
+ -- Robert Buels <rmb32@cornell.edu>  Thu, 21 Jan 2010 11:38:24 -0800
+
 Bio-Schema-Chado (0.05500)
 
   * much better POD, added autogenerated links from Schema.pm to
